mule-user-guide/v/3.3/atom-module-reference.adoc
=  Atom模块参考

Atom这个名字适用于一对相关的标准。 Atom Syndication Format是一种用于Web Feed的XML语言，而Atom Publishing Protocol（AtomPub或APP）则是用于创建和更新Web资源的基于HTTP的简单协议。骡子包含对两者的支持。

== 命名空间和语法

XML名称空间

[source]
----
http://www.mulesoft.org/schema/mule/atom
----

XML架构位置

[source]
----
http://www.mulesoft.org/schema/mule/atom http://www.mulesoft.org/schema/mule/atom/3.3/mule-atom.xsd
----

=== 特点

Mule Atom模块包含 link:http://abdera.apache.org/[Apache Abdera]的实现，从而可以在Mule配置中轻松地与Atom提要和Atom发布协议服务器集成。

该模块目前支持以下功能：

* 使用Atom提要
* 发布Atom费用
* 服务器端支持AtomPub作为Mule应用程序

===  ETag的

Atom HTTP终端默认尊重Etags和304 Not Modified响应代码，因此您不必担心会消耗不必要的更新。

== 示例配置

=== 使用Feed和其他原子资源

最常见的模式之一是与Atom集成轮询Feed更新。用骡子这可以很容易地完成。你必须先写下你的班级，它收到一个Atom条目：

[%header,cols="1*a"]
|===
^ | EntryReceiver.java
|
[source, java, linenums]
----
package org.mule.module.atom.example;
 
import org.apache.abdera.model.Feed;
 
public class EntryReceiver {
    public void processEntry(Entry entry) throws Exception {
        //process the entry
    }
}
----
|===

使用原子提要拆分器将传入的提要拆分为单独的消息，以便为提要中的每个条目调用组件方法。流量配置会这样：

[source, xml, linenums]
----
<flow name="eventConsumer">
    <poll frequency="10000">
        <http:outbound-endpoint address="http://localhost:9002/events"/>
    </poll>
    <atom:feed-splitter/>
    <atom:entry-last-updated-filter/>
    <component class="org.mule.module.atom.event.EntryReceiver"/>
</flow>
----

原子：入口最后更新过滤器是可选的。它只能用于过滤来自Feed的较早条目。请注意，atom：entry-last-updated-filter应该位于<atom：/ feed-splitter /之后，因为您需要拆分供稿条目，以便过滤器可以处理它们。另请注意，我们并未在过滤器上设置`lastUpdate`日期。这意味着所有可用条目的默认行为将在处理任何上次读取的新条目之前读取。

=== 自己访问Feed

如果您需要访问Feed本身，请使用Object-to-Feed转换器对其进行解析：

[source, xml, linenums]
----
<flow name="eventConsumer">
    <poll frequency="10000">
        <http:outbound-endpoint address="http://localhost:9002/events"/>
    </poll>
    <atom:object-to-feed-transformer/>
    <component class="org.mule.module.atom.event.FeedReceiver"/>
</flow>
----

现在，无论添加或更新了多少条目，您的组件只会在每次更改Feed时调用一次。组件上的方法应该期望`org.apache.abdera.model.Feed`对象。

[%header,cols="1*a"]
|===
| FeedReceiver.java
|
[source, java, linenums]
----
package org.mule.module.atom.example;
 
import org.apache.abdera.model.Feed;
 
public void processFeed(Feed feed) throws Exception {
    //do stuff
}
----
|===

如果您希望在使用馈送分离器时访问馈送对象，则可以通过名为'feed.object'的当前消息上的标题来使用它。

通过其他协议访问订阅源。=== 

您可以接收订阅源并使用其他Mule连接器（如JMS，File或XMPP）来处理它们。为此，需要通过连接器提供Atom提要。例如，Atom文档通过JMS发送或从文件中轮询。 Atom模式定义了一个<atom:feed-splitter/>消息处理器，它可以拆分从端点接收到的消息，如下所示：

[%header,cols="1*a"]
|===
^ |通过JMS使用Atom feed
|
[source, xml, linenums]
----
<flow name="feedSplitterConsumer">
    <jms:inbound-endpoint queue="feed.in">
        <atom:feed-splitter/>
    </jms:inbound-endpoint>
    <component class="org.mule.module.atom.event.EntryReceiver"/>
</flow>
----
|===

[%header,cols="1*a"]
|===
^ |从文件中消耗一个Atom提要
|
[source, xml, linenums]
----
<flow name="feedSplitterConsumer">
    <file:inbound-endpoint  path="${mule.working.dir}" pollingFrequency="1000" >
        <file:filename-wildcard-filter pattern="*.atom"/>
        <atom:feed-splitter/>
    </file:inbound-endpoint>
    <component class="org.mule.module.atom.event.EntryReceiver"/>
</flow>
----
|===

== 实现AtomPub服务器

Abdera的服务器端组件以提供者的概念为中心。供应商管理服务的工作区和集合。

您可以使用<atom:component/> XML元素在Mule中创建AtomPub服务，并引用Abdera服务上下文。

=== 创建Abdera服务上下文

以下示例显示如何创建构建JCR存储库以存储Atom条目的Abdera上下文。这些条目可以作为一个提要。

[%header,cols="1*a"]
|===
^ |阿布德拉-config.xml中
|
[source, xml, linenums]
----
<beans xmlns="http://www.springframework.org/schema/beans"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:a="http://abdera.apache.org"
       xsi:schemaLocation="
           http://abdera.apache.org http://abdera.apache.org/schemas/abdera-spring.xsd
           http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd">
 
    <a:provider id="provider">
        <a:workspace title="JCR Workspace">
            <ref bean="jcrAdapter"/>
        </a:workspace>
    </a:provider>
 
    <bean id="jcrRepository" class="org.apache.jackrabbit.core.TransientRepository" destroy-method="shutdown"/>
 
    <bean id="jcrAdapter"
          class="org.apache.abdera.protocol.server.adapters.jcr.JcrCollectionAdapter" init-method="initialize">
        <property name="author" value="Mule"/>
        <property name="title" value="Event Queue"/>
        <property name="collectionNodePath" value="entries"/>
        <property name="repository" ref="jcrRepository"/>
        <property name="credentials">
            <bean class="javax.jcr.SimpleCredentials">
                <constructor-arg>
                    <value>username</value>
                </constructor-arg>
                <constructor-arg>
                    <value>password</value>
                </constructor-arg>
            </bean>
        </property>
        <property name="href" value="events"/>
    </bean>
</beans>
----
|===

`<a:provider>`创建一个Abdera DefaultProvider，并允许您为其添加工作区和集合。这个`provider`引用被Mule中的<atom:component/>用来存储发送到组件的所有事件。

[source, xml, linenums]
----
<flow name="atomPubEventStore">
    <http:inbound-endpoint address="http://localhost:9002"/>
    <atom:component provider-ref="provider"/>
</flow>
----

== 发布到Atom组件

您可能还想将Atom条目或媒体条目发布到<atom:component/>或外部AtomPub集合。这是一个简单的出站端点，它通过`entry-builder-transformer`创建Abdera Entry并将其发布到AtomPub集合：

[source, xml, linenums]
----
<outbound-endpoint address="http://localhost:9002/events" mimeType="application/atom+xml;type=entry" connector-ref="HttpConnector">
    <atom:entry-builder-transformer>
        <atom:entry-property name="author" evaluator="string" expression="Ross Mason"/>
        <atom:entry-property name="content" evaluator="payload" expression=""/>
        <atom:entry-property name="title" evaluator="header" expression="title"/>
        <atom:entry-property name="updated" evaluator="function" expression="now"/>
        <atom:entry-property name="id" evaluator="function" expression="uuid"/>
    </atom:entry-builder-transformer>
</outbound-endpoint>
----

您也可以手动创建条目以获得更大的灵活性，并将其作为您的Mule消息有效载荷发送。以下是如何创建Abdera条目的简单示例：

[%header,cols="1*a"]
|===
^ |创建一个Abdera条目
|
[source, java, linenums]
----
package org.mule.providers.abdera.example;
 
import java.util.Date;
 
import org.apache.abdera.Abdera;
import org.apache.abdera.factory.Factory;
import org.apache.abdera.model.Entry;
import org.mule.transformer.AbstractTransformer;
 
public class EntryTransformer extend AbstractTransformer {
    public Object doTransform(Object src, String encoding) {
        Factory factory = Abdera.getInstance().getFactory();
         
        Entry entry = factory.newEntry();
        entry.setTitle("Some Event");
        entry.setContent("Foo bar");
        entry.setUpdated(new Date());
        entry.setId(factory.newUuidUri());
        entry.addAuthor("Dan Diephouse");
 
        return entry;
    }
}
----
|===

您也可以很简单地发布媒体条目。在这种情况下，无论您的邮件有效负载是什么，并将其作为媒体条目发布到集合中。您可以通过配置或通过在Mule消息上设置属性来提供自己的Slug。

[%header,cols="1*a"]
|===
^ |发送消息有效载荷作为媒体条目
|
[source, xml, linenums]
----
<flow name="blobEventPublisher">
    <inbound-endpoint ref="quartz.in"/>
    <component class="org.mule.module.atom.event.BlobEventPublisher"/>
 
    <outbound-endpoint address="http://localhost:9002/events"
          exchange-pattern="request-response" mimeType="text/plain">
       <message-properties-transformer scope="outbound">
           <add-message-property key="Slug" value="Blob Event"/>
       </message-properties-transformer>
   </outbound-endpoint>
</flow>
----
|===

== 路由过滤

Atom模块还包含一个`<atom:route-filter/>`。这允许ATOM请求被请求路径和HTTP动词过滤。 route属性定义了一个基于Ruby on Rails风格路线的URI模板类型。例如：

[source, code, linenums]
----
"feed" or ":feed/:entry"
----

有关参考资料，请参阅 link:http://guides.rubyonrails.org/routing.html[Ruby on Rails路由]。

例如，此过滤器可用于Mule中的基于内容的路由：

[%header,cols="1*a"]
|===
^ |路由过滤
|
[source, xml, linenums]
----
<flow name="customerService">
        <inbound-endpoint address="http://localhost:9002" exchange-pattern="request-response"/>
        <choice>
            <when>
                <atom:route-filter route="/bar/:foo"/>
                <outbound-endpoint address="vm://queue1" exchange-pattern="request-response"/>
            </when>
            <when>
                <atom:route-filter route="/baz" verbs="GET,POST"/>
                <outbound-endpoint address="vm://queue2" exchange-pattern="request-response"/>
            </when>
        </choice>
    </flow>
----
|===

== 配置参考

=== 元器件

表示Abdera组件。

。<component...>的属性
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
| provider-ref  |字符串 |否 |  |定义为Spring bean的Atom提供程序的标识。
|===

=== 分页器

将馈送的条目拆分为单个条目对象。每个条目都将在Mule中单独发布。

=== 过滤器

==== 输入上次更新的过滤器

将根据最后更新日期过滤ATOM条目对象。这对于从Feed中过滤较旧的条目很有用。此过滤器仅适用于Atom Entry对象而非Feed对象。

。<entry-last-updated-filter...>的属性
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
| lastUpdate  |字符串 |否 |  |从中过滤事件的日期。在此日期之前上次更新的任何条目将不被接受。日期格式是：yyyy-MM-dd hh：mm：ss，例如2008-12-25 13:00:00。如果只有日期很重要，您可以省略时间部分。您可以将该值设置为'now'以设置服务器启动的日期和时间。如果您想要接收所有可用条目，则不要设置此属性，然后再进行任何新条目。这是默认行为，适用于许多场景。
| acceptWithoutUpdateDate  |布尔值 |否 | true  |是否应该接受条目，如果它没有设置最后更新日期。
|===

==== 馈送上次更新的过滤器

将根据最后更新日期过滤整个ATOM Feed。这对处理自特定日期以来尚未更新的Feed是有用的。

此过滤器仅适用于Atom Feed对象。

通常，最好使用splitFeed = false在入站ATOM端点上设置lastUpdated属性，而不是使用此过滤器，但是，此过滤器可用于流中的其他位置。

。<feed-last-updated-filter ...的属性？
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
| lastUpdate  |字符串 |否 |  |从中过滤事件的日期。在此日期之前上次更新的任何条目将不被接受。日期格式是：yyyy-MM-dd hh：mm：ss，例如2008-12-25 13:00:00。如果只有日期很重要，您可以省略时间部分。您可以将该值设置为'now'以设置服务器启动的日期和时间。如果您想要接收所有可用条目，则不要设置此属性，然后再进行任何新条目。这是默认行为，适用于许多场景。
| acceptWithoutUpdateDate  |布尔值 |否 | true  |是否应该接受条目，如果它没有设置最后更新日期。
|===

==== 路由过滤器

允许按请求路径和HTTP动词过滤ATOM请求。

。<route-filter...>的属性
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|路由 |字符串 |否 |  a |为ATOM请求创建的URI请求路径。这匹配请求URL的路径。 route属性定义了一个基于Ruby on Rails风格路线的URI模板类型。例如："feed"或":feed/:entry"。作为参考，请参阅Ruby On Rails路由

http://guides.rubyonrails.org/routing.html
|动词 |字符串 |否 |  |将由此过滤器接受的HTTP动词的逗号分隔lsit。默认情况下，所有动词都被接受。
|===

=== 条目生成器变换器

使用表达式来配​​置Atom Entry的转换器。用户可以指定一个或多个用于配置bean属性的表达式。

。<entry-builder-transformer...>的子元素
[%header%autowidth.spread]
|===
| {名称{1}}基数 |说明
|入门属性 | 0..1  |
|===

=== 馈送变压器的对象

将消息的有效负载转换为`org.apache.abdera.model.Feed`实例。

== 架构

使用 link:http://www.filigris.com/products/docflex_xml/xsddoc/[DocFlex / XMl XSDDoc] 2.5.0模板集通过 link:http://www.filigris.com/products/docflex_xml/#docflex-xml-re[DocFlex / XML RE] 1.8.5生成XMl架构文档。 link:http://www.altova.com/xmlspy[Altova XML Spy]通过 link:http://www.filigris.com/products/docflex_xml/integrations/xmlspy/[DocFlex / XML XMLSpy集成]生成的所有内容模型图。

== 的Maven

ATOM模块可以包含以下依赖项：

[source, xml, linenums]
----
<dependency>
  <groupId>org.mule.modules</groupId>
  <artifactId>mule-module-atom</artifactId>
  <version>3.3.0</version>
</dependency>
----

投票原子供稿时的== 礼仪要点

. 使用HTTP缓存。发送Etags和LastModified头文件.Recognize 304未修改的响应。这样你可以节省很多带宽。此外，某些脚本会识别LastModified标题并仅返回部分内容（即仅返回两个或三个最新项目，而不是全部30个）。
. 不要从支持RPC Ping的服务（或其他PUSH服务，如PubSubHubBub）中轮询RSS。如果您收到来自服务的PUSH通知，则不必在标准时间间隔内轮询数据 - 每天进行一次，以检查机制是否仍然有效（ping可以禁用，重新配置，损坏等） ）。这样，您只能在接收通知时获取RSS，而不是每隔一小时左右。
. 检查TTL（在RSS中）或缓存控制标题（在ATOM中过期），并且在资源到期之前不要获取。
. 尝试适应每个RSS提要中新项目的频率。如果在过去的一周内，特定Feed中只有两次更新，请不要每天更换一次。 AFAIR谷歌阅读器做到这一点。
. 在夜间或其他时间降低网站流量较低时的速度。

== 另请参阅

*  link:https://cwiki.apache.org/confluence/display/ABDERA/Your+first+AtomPub+Server[您的第一个AtomPub服务器]
*  link:https://cwiki.apache.org/confluence/display/ABDERA/Spring+Integration[Abdera Spring集成]
